video gallery refinement and fixed CompleteBlockLinksTemplate on mobile

--- a/theme/ItaliaTheme/Blocks/_videoGallery.scss
+++ b/theme/ItaliaTheme/Blocks/_videoGallery.scss
@@ -8,7 +8,9 @@
       height: 400px;
     }
   }
-
+  .add-block-wrapper {
+    text-align: center;
+  }
   .channel {
     display: flex;
     align-items: center;
